--- a/configs/experiment/learn_only_sioconv.yaml
+++ b/configs/experiment/learn_only_sioconv.yaml
@@ -78,8 +78,10 @@ trainers:
     observation_encoder_name: null # embed observationを直接使う
     max_epochs: 1
     partial_sampler:
-      sequence_length: ${python.eval:"256 + 1"} # +1 to generate future target data.
-      max_samples: 64 # Iteraction count.
+      sequence_length: ${python.eval:"256 // ${..partial_dataloader.batch_size} + 1"} # +1 to generate future target data.
+      max_samples: ${python.eval:"64 * ${..partial_dataloader.batch_size}"} # 64 is Iteraction count.
     minimum_new_data_count: 128
+    partial_dataloader:
+      batch_size: 1
 
 task_name: "learn_only_sioconv"
