max_imagination_stepsのデフォルト値を1に変更

--- a/configs/experiment/i_jepa_sioconv_ppo_multi_step.yaml
+++ b/configs/experiment/i_jepa_sioconv_ppo_multi_step.yaml
@@ -21,7 +21,7 @@ shared:
 
 interaction:
   agent:
-    max_imagination_steps: 50 # 5 sec
+    max_imagination_steps: 1 # * 0.1 = seconds.
 
   observation_wrappers:
     - _target_: ami.interactions.io_wrappers.tensor_video_recorder.TensorVideoRecorder
