--- a/configs/experiment/i_jepa_mean_patch_sioconv_ppo_multi_step.yaml
+++ b/configs/experiment/i_jepa_mean_patch_sioconv_ppo_multi_step.yaml
@@ -22,6 +22,9 @@ shared:
 interaction:
   agent:
     max_imagination_steps: 1 # 0.1 sec
+    log_reward_imaginations: False
+    log_reconstruction_imaginations: False
+    log_imagination_trajectory: False
 
   observation_wrappers:
     - _target_: ami.interactions.io_wrappers.function_wrapper.FunctionIOWrapper
