--- a/configs/experiment/i_jepa_mean_patch_sioconv_ppo_multi_step.yaml
+++ b/configs/experiment/i_jepa_mean_patch_sioconv_ppo_multi_step.yaml
@@ -21,7 +21,7 @@ shared:
 
 interaction:
   agent:
-    max_imagination_steps: 1 # 0.1 sec
+    max_imagination_steps: 10 # 1.0 sec
     log_reward_imaginations: False
     log_reconstruction_imaginations: False
     log_imagination_trajectory: False
@@ -51,6 +51,7 @@ data_collectors:
   ppo_trajectory:
     max_len: ${python.eval:"128 + 1"} # +1 to retrieve final next value function output.
     use_embed_obs_as_observation: True
+    gamma: 0.9
 
 trainers:
   i_jepa:
@@ -59,6 +60,8 @@ trainers:
       batch_size: 32
       collate_fn:
         patch_size: ${models.patch_size}
+        mask_scale: [0.2, 0.45]
+        n_masks: 6
     minimum_new_data_count: 128
 
   forward_dynamics:
@@ -69,6 +72,7 @@ trainers:
       max_samples: 64 # Iteraction count.
     minimum_new_data_count: 128
   ppo:
+    entropy_coef: 0.1
     partial_dataloader:
       batch_size: 8
     max_epochs: 3
