configファイルに設定を追加

--- a/configs/interaction/environment/vrchat_image_discrete.yaml
+++ b/configs/interaction/environment/vrchat_image_discrete.yaml
@@ -11,3 +11,6 @@ actuator:
   _target_: ami.interactions.environments.actuators.vrchat_osc_discrete_actuator.VRChatOSCDiscreteActuator
   osc_address: "127.0.0.1"
   osc_sender_port: 9000
+  move_vertical_velocity: 1.0
+  move_horizontal_velocity: 1.0
+  look_horizontal_velocity: 1.0
