--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ bottle = "^0.12.25"
 webtest = "^3.0.0"
 hydra-core = "^1.3.2"
 hydra-colorlog = "^1.2.0"
-vrchat-io = {git = "https://github.com/Geson-anko/vrchat-io.git", rev = "main"}
+vrchat-io = {git = "https://github.com/Geson-anko/vrchat-io.git", rev = "0.1.3"}
 tensorboard = "2.15.0"
 einops = "^0.8.0"
 h5py = "^3.11.0"
