--- a/configs/experiment/i_jepa_sioconv_ppo_fundamental_whitenoize.yaml
+++ b/configs/experiment/i_jepa_sioconv_ppo_fundamental_whitenoize.yaml
@@ -7,4 +7,5 @@ interaction:
     observation_generator:
       _target_: torch.randn
 
-task_name: i_jepa_sioconv_ppo_fundamental_whitenoize
+task_name: i_jepa_sioconv_ppo_fundamental
+subtask_name: whitenoize
