--- a/configs/experiment/i_jepa_sioconv_ppo_fundamental_blackout.yaml
+++ b/configs/experiment/i_jepa_sioconv_ppo_fundamental_blackout.yaml
@@ -7,4 +7,5 @@ interaction:
     observation_generator:
       _target_: torch.zeros
 
-task_name: i_jepa_sioconv_ppo_fundamental_blackout
+task_name: i_jepa_sioconv_ppo_fundamental
+subtask_name: blackout
