add default entropy coef

--- a/configs/experiment/i_jepa_sioconv_ppo_fundamental_whitenoize_avgpool.yaml
+++ b/configs/experiment/i_jepa_sioconv_ppo_fundamental_whitenoize_avgpool.yaml
@@ -8,4 +8,8 @@ models:
     inference_forward:
       kernel_size: 1
 
+trainers: 
+  ppo:
+    entropy_coef: 0.999 # デフォルト.
+
 subtask_name: whitenoize_avgpool
