--- a/configs/experiment/i_jepa_sioconv_ppo_fundamental_whitenoize_avgpool.yaml
+++ b/configs/experiment/i_jepa_sioconv_ppo_fundamental_whitenoize_avgpool.yaml
@@ -8,8 +8,8 @@ models:
     inference_forward:
       kernel_size: 1
 
-trainers: 
-  ppo:
-    entropy_coef: 0.999 # デフォルト.
+data_collectors:
+  ppo_trajectory:
+    gamma: 0.999
 
 subtask_name: whitenoize_avgpool
