--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.10.1,<=3.10.12"
-torch = "^2.1.2"
+torch = ">=2.2.2,<2.3.0"
 numpy = "^1.21.2"
 torchvision = "^0.17.0"
 rootutils = "^1.0.7"
@@ -25,6 +25,7 @@ matplotlib = "^3.9.2"
 seaborn = "^0.13.2"
 soundfile = "^0.12.1"
 python-dotenv = "^1.0.1"
+tensordict = "0.3.2"
 
 
 [tool.poetry.group.dev.dependencies]
