add poetry lock and ignore mypy pytest cache

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,8 +2,9 @@
 /data/
 /logs/
 .env
-poetry.lock
 unity_executables/
+.mypy_cache
+.pytest_cache
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
