--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -84,4 +84,4 @@ repos:
     hooks:
       - id: codespell
         args:
-          - --skip=logs/**,data/**,*.ipynb,obs_settings/**
+          - --skip=logs/**,data/**,*.ipynb,obs_settings/**,*.lock
