--- a/configs/models/multimodal_temporal/default.yaml
+++ b/configs/models/multimodal_temporal/default.yaml
@@ -163,8 +163,8 @@ forward_dynamics:
         path: ami.interactions.environments.actuators.vrchat_osc_discrete_actuator.ACTION_CHOICES_PER_CATEGORY
     reward_hat_dist_head:
       _target_: ami.models.components.fully_connected_normal.FullyConnectedNormal
-      in_features: ${..core_model.dim}
-      out_features: 1
+      dim_in: ${..core_model.dim}
+      dim_out: 1
       squeeze_feature_dim: True
 
 policy_value:
@@ -182,7 +182,7 @@ policy_value:
       num_head: 8
     observation_hidden_projection:
       _target_: ami.models.policy_value_common_net.ConcatFlattenedObservationAndLerpedHidden
-      dim_obs: ${..observation_projection.dim_out}
+      dim_obs: ${models.multimodal_temporal_encoder.model.core_model.dim}
       dim_hidden: ${models.forward_dynamics.model.core_model.dim}
       dim_out: 512
     core_model:
