add key `reward` to forward dynamics trajectory buffer

--- a/configs/data_collectors/multimodal_temporal_dynamics_ppo.yaml
+++ b/configs/data_collectors/multimodal_temporal_dynamics_ppo.yaml
@@ -15,6 +15,7 @@ forward_dynamics_trajectory:
     - "observation"
     - "hidden"
     - "action"
+    - "reward"
 
 ppo_trajectory:
   _target_: ami.data.buffers.ppo_trajectory_buffer.PPOTrajectoryBuffer.reconstructable_init
