update subtask name of no_action experiment config

--- a/configs/experiment/multimodal_temporal/blackout_no_action.yaml
+++ b/configs/experiment/multimodal_temporal/blackout_no_action.yaml
@@ -13,5 +13,4 @@ interaction:
     observation_generator:
       _target_: torch.zeros
 
-subtask_name: blackout
-task_tag: no_action
+subtask_name: blackout_no_action
