add model config: multimodal_temporal/no_action_lage_depth

--- a/configs/models/multimodal_temporal/no_action.yaml
+++ b/configs/models/multimodal_temporal/no_action.yaml
@@ -89,7 +89,7 @@ multimodal_temporal_encoder:
         ${python.eval:"
         ${..observation_flattens.image.dim_out}
         "}
-      out_features: 1024
+      out_features: ${..core_model.dim}
     core_model:
       _target_: ami.models.components.sioconvps.SioConvPS
       depth: 6
