add dtype specification to shared config and default launch config

--- a/configs/models/image_vae.yaml
+++ b/configs/models/image_vae.yaml
@@ -6,3 +6,4 @@ height: ${shared.image_height}
 width: ${shared.image_width}
 channels: ${shared.image_channels}
 latent_dim: 512
+dtype: ${shared.dtype}
