--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = ">=3.10.1,<=3.10.12"
 torch = ">=2.2.2,<2.3.0"
 numpy = "^1.21.2"
 torchvision = "^0.17.0"
+torchaudio = ">=2.2.2,<2.3.0"
 rootutils = "^1.0.7"
 bottle = "^0.12.25"
 webtest = "^3.0.0"
