--- a/configs/models/bool_mask_audio_jepa.yaml
+++ b/configs/models/bool_mask_audio_jepa.yaml
@@ -14,10 +14,10 @@ audio_jepa_target_encoder:
     patch_sample_size: 400
     stride: 320
     in_channels: ${shared.audio_channel_size}
-    embed_dim: 768
-    out_dim: 384
-    depth: 12
-    num_heads: 12
+    embed_dim: 216
+    out_dim: 32
+    depth: 6
+    num_heads: 3
     mlp_ratio: 4.0
 
 audio_jepa_context_encoder:
@@ -32,7 +32,13 @@ audio_jepa_predictor:
   has_inference: False
   model:
     _target_: ami.models.bool_mask_audio_jepa.BoolTargetAudioJEPAPredictor
-    n_patches: ${python.eval:"(${models.audio_jepa_target_encoder.input_sample_size} - (${models.audio_jepa_target_encoder.patch_sample_size} - ${models.audio_jepa_target_encoder.stride}))//${models.audio_jepa_target_encoder.stride}"}
+    n_patches: >-
+      ${python.eval:"(
+        (${models.audio_jepa_target_encoder.input_sample_size} 
+        - (${models.audio_jepa_target_encoder.patch_sample_size} 
+        - ${models.audio_jepa_target_encoder.stride}))
+        // ${models.audio_jepa_target_encoder.stride}
+      )"} 
     context_encoder_out_dim: ${models.audio_jepa_target_encoder.model.out_dim}
     hidden_dim: 384
     depth: 6
