--- a/configs/experiment/temporal/flickerimage_no_action.yaml
+++ b/configs/experiment/temporal/flickerimage_no_action.yaml
@@ -1,8 +1,8 @@
 # @package _global_
 
 defaults:
-  - multimodal_temporal/fundamental
-  - override /models: multimodal_temporal/no_action
+  - temporal/fundamental
+  - override /models: temporal/no_action
 
 interaction:
   agent:
