--- a/configs/experiment/temporal/fundamental.yaml
+++ b/configs/experiment/temporal/fundamental.yaml
@@ -5,7 +5,7 @@
 defaults:
   - override /interaction/agent: multimodal_temporal_curiosity
   - override /interaction/environment: dummy_image_io
-  - override /models: multimodal_temporal/default.yaml
+  - override /models: temporal/default.yaml
   - override /data_collectors: multimodal_temporal_dynamics_ppo
   - override /trainers: i_jepa_mulitmodal_temporal_dynamics_ppo
 
