--- a/configs/experiment/temporal/vrchat.yaml
+++ b/configs/experiment/temporal/vrchat.yaml
@@ -77,5 +77,5 @@ trainers:
     max_epochs: 6
     # (buffer size / batch size) * epochs = iteration. (24.)
 
-task_name: multimodal_temporal_fundamental
+task_name: temporal_fundamental
 subtask_name: vrchat
