--- a/configs/experiment/sioconv_policy/fundamental.yaml
+++ b/configs/experiment/sioconv_policy/fundamental.yaml
@@ -3,7 +3,7 @@
 # Sioconv Polict の基礎実験用
 
 defaults:
-  - override /interaction/agent: multimodal_temporal_curiosity
+  - override /interaction/agent: temporal_curiosity
   - override /interaction/environment: dummy_image_io
   - override /models: sioconv_policy/default.yaml
   - override /data_collectors: multimodal_temporal_dynamics_ppo
