--- a/configs/trainers/bool_mask_audio_jepa.yaml
+++ b/configs/trainers/bool_mask_audio_jepa.yaml
@@ -6,7 +6,7 @@ audio_jepa_latent_auralization_context:
   generator_name: hifigan_context_auralization_generator
   mel_spectrogram:
     _target_: torchaudio.transforms.MelSpectrogram
-    sample_rate: ${shared.sample_rate}
+    sample_rate: ${shared.audio_sample_rate}
     n_fft: 1024
     win_length: 1024
     hop_length: 256
@@ -35,24 +35,18 @@ audio_jepa_latent_auralization_context:
     log_dir: ${paths.tensorboard_dir}/audio_jepa_latent_auralization_context
     log_every_n_steps: 1
 
-  # validation_dataloader:
-  #   _target_: torch.utils.data.DataLoader
-  #   batch_size: 128
-  #   shuffle: false
-  #   drop_last: false
-  #   dataset:
-  #     _target_: ami.trainers.components.vision.IntervalSamplingImageDataset
-  #     image_dir: ${paths.data_dir}/random_observation_action_log/validation
-  #     num_sample: 512
-  #     pre_loading: true
-  #     transform:
-  #       _target_: torchvision.transforms.v2.Compose
-  #       transforms:
-  #         - _target_: torchvision.transforms.v2.Resize
-  #           size:
-  #             - ${shared.image_height}
-  #             - ${shared.image_width}
-  #         - _target_: ami.trainers.components.vision.Standardization
+  validation_dataloader:
+    _target_: torch.utils.data.DataLoader
+    batch_size: 128
+    shuffle: false
+    drop_last: false
+    dataset:
+      _target_: ami.trainers.components.auditory.IntervalSamplingAudioDataset
+      audio_dir: ${paths.data_dir}/random_observation_action_log/validation/audio/
+      sample_rate: ${shared.audio_sample_rate}
+      sample_size: ${shared.audio_sample_size}
+      num_select: 512
+      pre_loading: true
 
   device: ${devices.0}
   max_epochs: ${trainers.audio_jepa.max_epochs}
@@ -64,7 +58,7 @@ audio_jepa_latent_auralization_target:
   generator_name: hifigan_context_auralization_generator
   mel_spectrogram:
     _target_: torchaudio.transforms.MelSpectrogram
-    sample_rate: ${shared.sample_rate}
+    sample_rate: ${shared.audio_sample_rate}
     n_fft: 1024
     win_length: 1024
     hop_length: 256
@@ -82,24 +76,18 @@ audio_jepa_latent_auralization_target:
     shuffle: true
     drop_last: true
 
-  # validation_dataloader:
-  #   _target_: torch.utils.data.DataLoader
-  #   batch_size: 128
-  #   shuffle: false
-  #   drop_last: false
-  #   dataset:
-  #     _target_: ami.trainers.components.vision.IntervalSamplingImageDataset
-  #     image_dir: ${paths.data_dir}/random_observation_action_log/validation
-  #     num_sample: 512
-  #     pre_loading: true
-  #     transform:
-  #       _target_: torchvision.transforms.v2.Compose
-  #       transforms:
-  #         - _target_: torchvision.transforms.v2.Resize
-  #           size:
-  #             - ${shared.image_height}
-  #             - ${shared.image_width}
-  #         - _target_: ami.trainers.components.vision.Standardization
+  validation_dataloader:
+    _target_: torch.utils.data.DataLoader
+    batch_size: 128
+    shuffle: false
+    drop_last: false
+    dataset:
+      _target_: ami.trainers.components.auditory.IntervalSamplingAudioDataset
+      audio_dir: ${paths.data_dir}/random_observation_action_log/validation/audio/
+      sample_rate: ${shared.audio_sample_rate}
+      sample_size: ${shared.audio_sample_size}
+      num_select: 512
+      pre_loading: true
 
   partial_optimizer:
     _target_: torch.optim.AdamW
