match test of audio jepa experiments into of i_jepa experiment

--- a/configs/experiment/bool_mask_audio_jepa_with_dataset.yaml
+++ b/configs/experiment/bool_mask_audio_jepa_with_dataset.yaml
@@ -7,7 +7,8 @@ defaults:
 interaction:
   environment:
     observation_generator:
-      audio_files:
-        - data/... # Describe directories to do experiment
+      audio_files: ${audio_data_dir}
       max_frames_per_file: ${python.eval:"4 * 60 * 60 * ${shared.audio_sample_rate}"} # Each audio file is 4 hours.
+
+audio_data_dir: ??? # Specify as command line argument. `python launch.py experiment=<experiment file name> audio_data_dir=<path/to/image_data>
 task_name: bool_mask_audio_jepa_with_dataset
