Apply suggestions from code review
Co-authored-by: GesonAnko <59220704+Geson-anko@users.noreply.github.com>

--- a/configs/experiment/bool_mask_audio_jepa.yaml
+++ b/configs/experiment/bool_mask_audio_jepa.yaml
@@ -5,6 +5,10 @@ defaults:
   - override /trainers: bool_mask_audio_jepa
 
 interaction:
+  observation_generator:
+    _args_:
+      - ${shared.audio_channels}
+      - ${shared.audio_sample_size}
   observation_wrappers:
     - _target_: ami.interactions.io_wrappers.function_wrapper.FunctionIOWrapper
       wrap_function:
