--- a/configs/trainers/bool_mask_audio_jepa.yaml
+++ b/configs/trainers/bool_mask_audio_jepa.yaml
@@ -69,25 +69,9 @@ audio_jepa_latent_auralization_target:
     normalized: False
   rec_coef: 45.0
 
-  partial_dataloader:
-    _target_: torch.utils.data.DataLoader
-    _partial_: true
-    batch_size: ${trainers.audio_jepa.partial_dataloader.batch_size}
-    shuffle: true
-    drop_last: true
+  partial_dataloader: ${..audio_jepa_latent_auralization_context.partial_dataloader}
 
-  validation_dataloader:
-    _target_: torch.utils.data.DataLoader
-    batch_size: 128
-    shuffle: false
-    drop_last: false
-    dataset:
-      _target_: ami.trainers.components.auditory.IntervalSamplingAudioDataset
-      audio_dir: ${paths.data_dir}/random_observation_action_log/validation/audio/
-      sample_rate: ${shared.audio_sample_rate}
-      sample_size: ${shared.audio_sample_size}
-      num_select: 512
-      pre_loading: true
+  validation_dataloader: ${..audio_jepa_latent_auralization_context.validation_dataloader}
 
   partial_optimizer:
     _target_: torch.optim.AdamW
