--- a/configs/experiment/bool_mask_audio_jepa.yaml
+++ b/configs/experiment/bool_mask_audio_jepa.yaml
@@ -7,7 +7,7 @@ defaults:
 interaction:
   observation_generator:
     _args_:
-      - ${shared.audio_channels}
+      - ${shared.audio_channel_size}
       - ${shared.audio_sample_size}
   observation_wrappers:
     - _target_: ami.interactions.io_wrappers.function_wrapper.FunctionIOWrapper
