--- a/configs/experiment/bool_mask_audio_jepa.yaml
+++ b/configs/experiment/bool_mask_audio_jepa.yaml
@@ -3,12 +3,9 @@
 defaults:
   - override /models: bool_mask_audio_jepa
   - override /trainers: bool_mask_audio_jepa
+  - override /interaction/environment: dummy_audio_io
 
 interaction:
-  observation_generator:
-    _args_:
-      - ${shared.audio_channel_size}
-      - ${shared.audio_sample_size}
   observation_wrappers:
     - _target_: ami.interactions.io_wrappers.function_wrapper.FunctionIOWrapper
       wrap_function:
