--- a/configs/experiment/bool_mask_audio_jepa.yaml
+++ b/configs/experiment/bool_mask_audio_jepa.yaml
@@ -1,6 +1,7 @@
 # @package _global_
 
 defaults:
+  - override /data_collectors: audio
   - override /models: bool_mask_audio_jepa
   - override /trainers: bool_mask_audio_jepa
   - override /interaction/environment: dummy_audio_io
