--- a/configs/models/bool_mask_audio_jepa.yaml
+++ b/configs/models/bool_mask_audio_jepa.yaml
@@ -57,7 +57,7 @@ hifigan_context_auralization_generator:
     upsample_rates: [10, 8, 2, 2]
     upsample_kernel_sizes: [20, 16, 4, 4]
     upsample_paddings: [4, 2, 1, 1]
-    upsample_initial_channel: 512
+    upsample_initial_channel: 192
     resblock_kernel_sizes: [3, 7, 11]
     resblock_dilation_sizes: [[1, 3, 5], [1, 3, 5], [1, 3, 5]]
 
@@ -76,6 +76,7 @@ hifigan_context_auralization_multi_scale_discriminator:
   model:
     _target_: ami.models.hifigan.discriminators.MultiScaleDiscriminator
     in_channels: ${models.hifigan_context_auralization_generator.model.out_channels}
+    initial_hidden_channels: 32
 
 hifigan_target_auralization_generator: ${.hifigan_context_auralization_generator}
 hifigan_target_auralization_multi_period_discriminator: ${.hifigan_context_auralization_multi_period_discriminator}
