--- a/configs/trainers/bool_mask_audio_jepa.yaml
+++ b/configs/trainers/bool_mask_audio_jepa.yaml
@@ -28,10 +28,10 @@ audio_jepa_latent_auralization_target:
     drop_last: true
 
   partial_optimizer:
-    _target_: torch.optim.AdamW
+    _target_: torch.optim.Adam
     _partial_: true
     lr: 0.0002
-    weight_decay: 0.01
+    betas: [0.8, 0.99]
 
   logger:
     _target_: ami.tensorboard_loggers.StepIntervalLogger
