--- a/configs/models/bool_mask_audio_jepa.yaml
+++ b/configs/models/bool_mask_audio_jepa.yaml
@@ -68,7 +68,7 @@ hifigan_context_auralization_multi_period_discriminator:
   model:
     _target_: ami.models.hifigan.discriminators.MultiPeriodDiscriminator
     in_channels: ${models.hifigan_context_auralization_generator.model.out_channels}
-    n_periods: 2 # Set 2 to save VRAM consumption (original: 5)
+    n_periods: 2
 
 hifigan_context_auralization_multi_scale_discriminator:
   _target_: ami.models.model_wrapper.ModelWrapper
@@ -77,7 +77,7 @@ hifigan_context_auralization_multi_scale_discriminator:
   model:
     _target_: ami.models.hifigan.discriminators.MultiScaleDiscriminator
     in_channels: ${models.hifigan_context_auralization_generator.model.out_channels}
-    n_scales: 1 # Set 1 to save VRAM consumption (original: 3)
+    n_scales: 1
 
 hifigan_target_auralization_generator: ${.hifigan_context_auralization_generator}
 hifigan_target_auralization_multi_period_discriminator: ${.hifigan_context_auralization_multi_period_discriminator}
